# nerdy-k8s-volume-manager

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  container-image.yml
deploy/k8s/: README.md
deploy/k8s/app/: deployment.yaml  kustomization.yaml  namespace.yaml  persistentvolumeclaim.yaml  remote-kubeconfig-secret-example.yaml  service.yaml
deploy/k8s/rbac/: README.md  clusterrole-cluster-discovery.yaml  clusterrole-runtime.yaml  clusterrolebinding-cluster-discovery.yaml  rolebinding-runtime-template.yaml  serviceaccount.yaml
docs/adrs/: 001-kubernetes-volume-backup-streamlit-mvp-architecture.md  002-kubernetes-primary-runtime-and-hybrid-cluster-authentication.md  INDEX.md
docs/implementation-plans/: kubernetes-primary-runtime-and-hybrid-cluster-authentication-2026-02-23.md  kubernetes-volume-backup-streamlit-mvp-2026-02-23.md
docs/operations/: adr-002-release-acceptance-checklist.md  authentication-methods.md  security-baseline.md
docs/runbooks/: mvp-operations.md  restore-procedure.md
src/nerdy_k8s_volume_manager/: app.py  backup.py  config.py  k8s.py  metadata.py  models.py
src/nerdy_k8s_volume_manager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_app.py  test_backup_manager.py  test_backup_utils.py  test_container_guardrails.py  test_k8s.py  test_k8s_manifests.py  test_metadata.py  test_rbac_manifests.py
tests/integration/: README.md  conftest.py  test_kind_backup_smoke.py
tests/integration/manifests/: smoke-auth-rbac.yaml  smoke-pvc-pod.yaml
(+28 files in other folders)
