[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nerdy-k8s-volume-manager"
version = "0.1.0"
description = "Streamlit app for Kubernetes PVC inventory and tar backups"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "kubernetes>=30.1.0",
  "streamlit>=1.42.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.9.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: tests that require Docker + KinD + kubectl and a disposable Kubernetes cluster",
]
